:bug: (lp) Fix image size in blog on mobile
Closes #1605

--- a/ee/apps/landing-page/assets/prose.css
+++ b/ee/apps/landing-page/assets/prose.css
@@ -23,3 +23,7 @@
 .prose > *:not(img) {
   width: 100%;
 }
+
+.prose > iframe {
+  border-radius: 0.5rem;
+}
